# heekscad-darwin

./: .gitmodules  CMakeLists.txt
cmake/Modules/: FindHeeksCAD.cmake  FindOCE.cmake  Findlibarea.cmake
